# my_cmake_tests

./: CMakeLists.txt  README.md  main.c
src/: print_para2.c  print_para2.h
tests/: test_print_para2.c
